objects/XOMBatchLineJob__c.object
<CustomObject>
    <description>Represents a single line to be processed via batch job</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Batch Line Jobs</relationshipLabel>
        <relationshipName>Batch_Line_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ItemsAddedToOrderCount__c</fullName>
        <formula>IF(ItemsAddedToOrder__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Items Added to Order Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemsAddedToOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Items Added to Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSON__c</fullName>
        <description>JSON object with the fields/attributes needed for this job/line.</description>
        <label>JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lote_Id__c</fullName>
        <label>Lote Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderActivatedCount__c</fullName>
        <formula>IF(OrderActivated__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Activated Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderActivated__c</fullName>
        <formula>ISPICKVAL(Order__r.vlocity_cmt__FulfilmentStatus__c, &quot;Activated&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderCreatedCount__c</fullName>
        <formula>IF(OrderCreated__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Created Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that says if the Order record for this job/line has been created.</description>
        <label>Order Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderDecomposedCount__c</fullName>
        <formula>IF(OrderDecomposed__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Decomposed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderDecomposed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that says if the Order record for this job/line has been processed.</description>
        <label>Order Decomposed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that says if the Order record for this job/line has been processed.</description>
        <label>Order Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order record created for provisioning this job/line.</description>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Batch Line Jobs</relationshipLabel>
        <relationshipName>XOMBatchLineJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The priority with which the job/line should be processed. Highest number = highest priority.</description>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessingFailedCount__c</fullName>
        <formula>IF(ProcessingFailed__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Processing Failed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessingFailed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processing Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of job to be done for this line.</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Repro</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Nominatividad</fullName>
                </value>
                <value>
                    <fullName>Rehabilitacion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Batch Line Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BLJ-{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>BatchLineJob Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Line Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>